--- a/src/common/print.css
+++ b/src/common/print.css
@@ -54,7 +54,7 @@
 	display: none !important;
 	}
 	
-.fc-event .ui-resizable-handle {
+.fc-event .by-resizable-handle {
 	display: none !important;
 	}
 	
